adding some more test
