# src/controllers/accountController.js
@@ -9,7 +9,10 @@ class accountController {
   static async createAccount(req, res) {
     const accountOwner = await search.searchUserById(req.user.id);
     if (accountOwner.rowCount === 0) {
-      return res.status(500).json({ status: 500, error: 'server error' });
+      return res.status(500).json({
+        status: 500,
+        error: 'server error',
+      });
     }
     const newAccount = {
       accountNumber: uuid().toUpperCase(),
@@ -25,7 +28,9 @@ class accountController {
     const createAccount = await con.query(account.createAccount,
       [accountNumber, createdOn, owner, type, status, balance]);
     if (createAccount.rowCount === 0) {
-      return res.status(500).json({ status: 500, error: 'server error' });
+      return res.status(500).json({
+        status: 500, error: 'server error',
+      });
     }
     return res.status(201).json({
       status: 201,
@@ -47,7 +52,10 @@ class accountController {
     const searchAccount = await search.searchAccount(req.params.accountNo);
     if (searchAccount.rowCount !== 0) {
       if (searchAccount.rows[0].status === req.body.status) {
-        return res.status(409).json({ status: 409, error: `the accounts is already ${req.body.status}` });
+        return res.status(409).json({
+          status: 409,
+          error: `the accounts is already ${req.body.status}`,
+        });
       }
       const updateAccountStatus = await con.query(account.changeAccountStatus,
         [req.body.status, req.params.accountNo]);
@@ -61,18 +69,27 @@ class accountController {
           },
         });
       }
-    } return res.status(404).json({ status: 404, message: 'account not found' });
+    } return res.status(404).json({
+      status: 404,
+      message: 'account not found',
+    });
   }
 
   // ================================== DELETE ACCOUNT ==============================
   static async deleteAccount(req, res) {
     if (!req.params.accountNo) {
-      return res.status(400).json({ status: 400, error: 'please provide the account number' });
+      return res.status(400).json({
+        status: 400,
+        error: 'please provide the account number',
+      });
     }
     const searchAccount = await con.query(account.searchAccount, [req.params.accountNo]);
     if (searchAccount.rowCount !== 0) {
       if (searchAccount.rows[0].balance > 0) {
-        return res.status(403).json({ status: 403, message: 'you can\'t delete this account ' });
+        return res.status(403).json({
+          status: 403,
+          message: 'you can\'t delete this account',
+        });
       }
       const deleteAccount = await con.query(account.deleteAccount, [req.params.accountNo]);
       if (deleteAccount.rowCount !== 0) {
@@ -85,15 +102,25 @@ class accountController {
   // ================================== DISPLAY ACCOUNTS ==============================
   static async displayAccounts(req, res) {
     const allAccounts = await con.query(account.getAllAccount);
-    if (!allAccounts.error) return res.status(200).json({ status: 200, data: allAccounts.rows });
-    return res.status(401).json({ status: 500, message: 'server error please try again later' });
+    if (!allAccounts.error) {
+      return res.status(200).json({
+        status: 200,
+        data: allAccounts.rows,
+      });
+    }
+    return res.status(401).json({
+      status: 500,
+      message: 'server error please try again later',
+    });
   }
 
   // ================================== SEARCH ACCOUNT =================================
   static async searchAccount(req, res) {
     const getAccount = await search.searchAccount(req.params.accountNo);
     if (getAccount.rowCount === 0) {
-      return res.status(404).json({ status: 404, message: 'account not found' });
+      return res.status(404).json({
+        status: 404, message: 'account not found',
+      });
     }
     const getOwner = await search.searchUserById(getAccount.rows[0].owner);
     if (getAccount.rowCount !== 0) {
@@ -120,17 +147,31 @@ class accountController {
   static async getAccountsByStatus(req, res) {
     const accountsStatus = await con.query(account.accountStatus, [req.query.status]);
     if (accountsStatus.rowCount !== 0) {
-      return res.status(200).json({ status: 200, data: accountsStatus.rows });
+      return res.status(200).json({
+        status: 200,
+        data: accountsStatus.rows,
+      });
     }
-    return res.status(401).json({ status: 404, message: `there is no account with status ${req.query.status}` });
+    return res.status(401).json({
+      status: 404,
+      message: `there is no account with status ${req.query.status}`,
+    });
   }
 
   // ================================== DISPLAY USER ACCOUNTS =============================
   static async getUserAccounts(req, res) {
     const getUser = await search.searchUser(req.params.email);
     const getUserAccounts = await con.query(account.userAccounts, [getUser.rows[0].userid]);
-    if (getUserAccounts.rowCount !== 0) return res.status(200).json({ status: 200, data: getUserAccounts.rows });
-    return res.status(401).json({ status: 404, message: `no account fund for user with email ${req.params.email}` });
+    if (getUserAccounts.rowCount !== 0) {
+      return res.status(200).json({
+        status: 200,
+        data: getUserAccounts.rows,
+      });
+    }
+    return res.status(401).json({
+      status: 404,
+      message: `no account fund for user with email ${req.params.email}`,
+    });
   }
 }
 export default accountController;
