# src/router/router.js
@@ -23,7 +23,7 @@ route.patch('/api/v2/account/:accountNo', auth, checkUser.isAdmin, schema.valida
 route.get('/api/v2/accounts', auth, checkUser.isStaff, accountControl.displayAccounts);
 route.get('/api/v2/accounts/:accountNo', auth, checkUser.isOwner, accountControl.searchAccount);
 route.delete('/api/v2/account/:accountNo', auth, checkUser.isStaff, accountControl.deleteAccount);
-route.get('/api/v2/accounts/', auth, checkUser.isStaff, accountControl.getAccountsByStatus);
+route.get('/api/v2/account/', auth, checkUser.isStaff, accountControl.getAccountsByStatus);
 route.get('/api/v2/user/:email/accounts/', auth, checkUser.isAllowed, accountControl.getUserAccounts);
 
 // ------------------------------------------- TRANSACTION --------------------------
